libsql-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__attach_in_migration_is_forbidden.snap
---
source: libsql-server/tests/namespaces/shared_schema.rs
expression: "conn.execute_batch(\"ATTACH ns as attached; create table test (c)\").await.unwrap_err()"
---
Hrana(
    StreamError(
        Error {
            message: "Schema migration error: Error executing migration: ATTACH is not permitted in migration scripts",
            code: "SCHEMA_MIGRATION_ERROR",
        },
    ),
)
