libsql-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__no_job_created_when_migration_job_is_invalid.snap
---
source: libsql-server/tests/namespaces/shared_schema.rs
expression: "schema_conn.execute_batch(\"create table test (c); create table test (c)\").await.unwrap_err()"
---
Hrana(
    StreamError(
        Error {
            message: "Schema migration error: An error occured executing the migration at step 2: table test already exists in CREATE TABLE test (c); at offset 13",
            code: "SCHEMA_MIGRATION_ERROR",
        },
    ),
)
