libsql-server/tests/namespaces/snapshots/tests__namespaces__shared_schema__schema_deletion.snap
---
source: libsql-server/tests/namespaces/shared_schema.rs
expression: resp.body_string().await.unwrap()
---
"{\"error\":\"Namespace `schema` doesn't exist\"}"
